// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test: B.C. COVID-19 Vaccinations - Bar 1`] = `
<div
  style={
    Object {
      "height": 300,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <svg
    height={1}
    width={1}
  >
    <g
      onClick={[Function]}
    >
      <path
        d="M50,-49L-19,-49"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <path
        d="M38.50000000000001,-49L38.50000000000001,-39"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={38.50000000000001}
        y={-21}
      >
        2021/01/17
      </text>
      <path
        d="M27.000000000000004,-49L27.000000000000004,-39"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={27.000000000000004}
        y={-21}
      >
        2021/01/18
      </text>
      <path
        d="M15.5,-49L15.5,-39"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={15.5}
        y={-21}
      >
        2021/01/19
      </text>
      <path
        d="M4.000000000000002,-49L4.000000000000002,-39"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={4.000000000000002}
        y={-21}
      >
        2021/01/18
      </text>
      <path
        d="M-7.500000000000002,-49L-7.500000000000002,-39"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={-7.500000000000002}
        y={-21}
      >
        2021/01/20
      </text>
      <path
        d="M-19,-49L-19,-39"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={-19}
        y={-21}
      >
        2021/01/21
      </text>
    </g>
    <g
      onClick={[Function]}
    >
      <path
        d="M50,-49L50,20"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <path
        d="M50,-49L40,-49"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={-49}
      >
        0
      </text>
      <path
        d="M50,-26.000000000000007L40,-26.000000000000007"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={-26.000000000000007}
      >
        3000
      </text>
      <path
        d="M50,-3.0000000000000036L40,-3.0000000000000036"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={-3.0000000000000036}
      >
        6000
      </text>
      <path
        d="M50,20L40,20"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={20}
      >
        9000
      </text>
    </g>
    <path
      d="M33.50000000000001,-19.782333333333327L43.50000000000001,-19.782333333333327L43.50000000000001,-49L33.50000000000001,-49"
      fill="rgb(177, 0, 0)"
      stroke="#000"
      strokeWidth={1}
    />
    <path
      d="M22.000000000000004,-19.79L32,-19.79L32,-49L22.000000000000004,-49"
      fill="rgb(177, 0, 0)"
      stroke="#000"
      strokeWidth={1}
    />
    <path
      d="M10.5,-10.490333333333332L20.5,-10.490333333333332L20.5,-49L10.5,-49"
      fill="rgb(177, 0, 0)"
      stroke="#000"
      strokeWidth={1}
    />
    <path
      d="M-0.9999999999999982,-19.79L9.000000000000002,-19.79L9.000000000000002,-49L-0.9999999999999982,-49"
      fill="rgb(177, 0, 0)"
      stroke="#000"
      strokeWidth={1}
    />
    <path
      d="M-12.500000000000002,-4.8706666666666685L-2.5000000000000018,-4.8706666666666685L-2.5000000000000018,-49L-12.500000000000002,-49"
      fill="rgb(177, 0, 0)"
      stroke="#000"
      strokeWidth={1}
    />
    <path
      d="M-24,2.949333333333337L-14,2.949333333333337L-14,-49L-24,-49"
      fill="rgb(177, 0, 0)"
      stroke="#000"
      strokeWidth={1}
    />
  </svg>
</div>
`;

exports[`Test: Click handler 1`] = `
<div
  style={
    Object {
      "height": 300,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <svg
    height={1}
    width={1}
  >
    <g
      onClick={[Function]}
    >
      <path
        d="M0.09090909090909091,0.9090909090909091L0.3181818181818182,0.2272727272727273L0.5454545454545454,0.9090909090909091"
        fill="#000"
        stroke="#000"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`Test: Filled line 1`] = `
<div
  style={
    Object {
      "height": 300,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <svg
    height={1}
    width={1}
  >
    <path
      d="M0.09090909090909091,0.9090909090909091L0.3181818181818182,0.2272727272727273L0.5454545454545454,0.9090909090909091"
      fill="#000"
      stroke="#000"
      strokeWidth={1}
    />
  </svg>
</div>
`;

exports[`Test: Line 1`] = `
<div
  style={
    Object {
      "height": 300,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <svg
    height={1}
    width={1}
  >
    <path
      d="M0.09090909090909091,0.9090909090909091L0.3181818181818182,0.2272727272727273L0.5454545454545454,0.9090909090909091"
      fill="transparent"
      stroke="#000"
      strokeWidth={1}
    />
  </svg>
</div>
`;

exports[`Test: Scatter plot 1`] = `
<div
  style={
    Object {
      "height": 300,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <svg
    height={1}
    width={1}
  >
    <g
      onClick={[Function]}
    >
      <path
        d="M50,-29L-9,-29"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <path
        d="M50,-29L50,-19"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={50}
        y={-1}
      >
        0
      </text>
      <path
        d="M20.5,-29L20.5,-19"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={20.5}
        y={-1}
      >
        0.5
      </text>
      <path
        d="M-9,-29L-9,-19"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="middle"
        x={-9}
        y={-1}
      >
        1
      </text>
    </g>
    <g
      onClick={[Function]}
    >
      <path
        d="M50,-29L50,10"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <path
        d="M50,-29L40,-29"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={-29}
      >
        0
      </text>
      <path
        d="M50,-21.200000000000003L40,-21.200000000000003"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={-21.200000000000003}
      >
        0.5
      </text>
      <path
        d="M50,-13.399999999999999L40,-13.399999999999999"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={-13.399999999999999}
      >
        1
      </text>
      <path
        d="M50,-5.600000000000001L40,-5.600000000000001"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={-5.600000000000001}
      >
        1.5
      </text>
      <path
        d="M50,2.200000000000001L40,2.200000000000001"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={2.200000000000001}
      >
        2
      </text>
      <path
        d="M50,10L40,10"
        fill="transparent"
        stroke="#666"
        strokeWidth={2}
      />
      <text
        fill="#666"
        fontSize={16}
        style={
          Object {
            "fontFamily": "Helvetica, sans-serif",
          }
        }
        textAnchor="end"
        x={38}
        y={10}
      >
        2.5
      </text>
    </g>
    <g
      transform="translate(50, -29)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(44.1, -25.256)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(38.2, -21.98)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(32.3, -16.831999999999997)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(26.4, -14.492)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(20.5, -10.280000000000001)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(14.600000000000001, -7.160000000000002)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(8.700000000000003, -4.039999999999999)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(2.799999999999998, -0.9200000000000017)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <g
      transform="translate(-3.1000000000000005, 2.200000000000001)"
    >
      <path
        d="M4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,-4.51351666838205,0A4.51351666838205,4.51351666838205,0,1,1,4.51351666838205,0"
        fill="#5477a1"
        stroke="#5477a1"
        strokeWidth={1}
      />
    </g>
    <path
      d="M50,-29C48.033333333333324,-27.643672758663214,46.06666666666666,-26.287345517326425,44.1,-25.256C42.13333333333334,-24.224654482673575,40.16666666666667,-23.518290689357503,38.2,-21.98C36.233333333333334,-20.441709310642498,34.266666666666666,-18.07149172524356,32.3,-16.831999999999997C30.33333333333333,-15.592508274756435,28.366666666666664,-15.483742409668269,26.4,-14.492C24.433333333333334,-13.500257590331733,22.466666666666665,-11.625538636083364,20.5,-10.280000000000001C18.533333333333335,-8.934461363916638,16.566666666666666,-8.118103045998275,14.600000000000001,-7.160000000000002C12.633333333333336,-6.201896954001728,10.666666666666671,-5.102049179923541,8.700000000000003,-4.039999999999999C6.733333333333334,-2.9779508200764573,4.766666666666666,-1.953700234307561,2.799999999999998,-0.9200000000000017C0.8333333333333306,0.1137002343075574,-1.133333333333335,1.1568501171537793,-3.1000000000000005,2.200000000000001"
      fill="transparent"
      stroke="#5477a1"
      strokeWidth={1}
    />
  </svg>
</div>
`;
